[metadata]
name = torchkit
version = 0.0.1
author = David Bau
author_email = david.bau@gmail.com
description = Torch kit for quick research prototyping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidbau/torchkit
project_urls =
    Bug Tracker = https://github.com/davidbau/torchkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    torchkit = torchkit
packages = torchkit
python_requires = >=3.7
