[metadata]
name = baulab
version = 0.0.1
author = David Bau
author_email = david.bau@gmail.com
description = Bau lab python library for quick research prototyping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidbau/baulab
project_urls =
    Bug Tracker = https://github.com/davidbau/baulab/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    baulab = baulab
packages = baulab
python_requires = >=3.7
